# AuraPL

./: README.md  SECURITY.md  __init__.py  aurapl.bat  aurapl.py  pyproject.toml  run.py  runaurapl.py
.github/workflows/: mirror.yml  publish.yml
Dependencies/: sample-turtle.py  turtle.py
auraPL.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aurapl/: __init__.py  aurapl  aurapl.bat  dev.py  run.py  runaurapl.bat  runaurapl.py
aurapl/loader/: __init__.py
aurapl/pixelmdl/: __init__.py
