[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auraPL"
version = "0.2a3"
description = "A Programming Language called auraPL"
requires-python = ">=3.9"
license = { text = "All Rights Reserved" }
dependencies = [

]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["run*"]

[project.optional-dependencies]
nvm = ["Hello-Raphael8954"]